# swarm-bot-surveyor

./: CMakeLists.txt  README.md  package.xml  requirements.txt
gazebo_world/: terrain.world
launch/: survey_sim.launch
src/: exporter.py  slam_processor.py
